# slapos

./: .editorconfig  .gitignore  00.Repository.Rules.txt  AGENTS.md  CHANGES.rst  CHANGES.txt  CLAUDE.md  MANIFEST.in  README.branch  README.md  README.rst  README.software.rst  README.software.txt  README.txt  README.update-hash.rst  TODO.txt  bootstrap.py  buildout.cfg  computer_definition.cfg.example  cros_full_build.sh.in  documentation-pip-requirements.txt  format-json  index.html  instance.cfg  monitor2.stash.patch  package-lock.json  package.json  release-cookbook  release-sr  request_software_name.sh  schema.json  setup.py  setup.py.orig  sla.schema.json  slapos-client.cfg.example  slapos-proxy.cfg.example  slapos.cfg.example  software.cfg  update-hash  update-hash-mergetool  (+2 more)
.claude/: env.local.json.example  settings.json
.claude/commands/: run-rapid-cdn-test.md  test-results.md
.claude/hooks/: check-hash-consistency.sh  remind-rebuild.sh  remind-reprocess.sh  update-hash-on-edit.sh
.husky/: pre-commit
component/: defaults.cfg  macros.cfg
component/6tunnel/: buildout.cfg
component/PyWavelets/: buildout.cfg
component/ZEO/: buildout.cfg
component/ZODB/: 403.patch  add-class_factory_parameter.patch  buildout-dev.cfg  buildout.cfg  incpozo-5.8.0.patch  incpozo-6.0.1.patch  keep-only-latest-index-option-5.8.1.patch  keep-only-latest-index-option-6.0.1.patch  repozo-allow-verify-to-check-backup-against-source-Data.fs.patch  test-common.cfg  test-zodb3.cfg  test-zodb4-wc2.cfg  test-zodb5.cfg  test.cfg
component/babeld/: net.c  (+12 more)
component/gdal/test/: README.md  pyproject.toml  setup.py  test.py
documentation/: slapos.usage.rst
scripts/: cros_full_build.in  cros_full_build.sh.in  modify_image.sh  modify_image.sh.in  test_nayuos_image
slapos/: README.console.txt  README.format.txt  README.grid.txt  README.libnetworkcache.txt  README.manager.txt  README.proxy.txt  README.slap.txt  bang.py  cache.py  client.py  console.py  entry.py  format.py  human.py  libnetworkcache.py  slapos.xsd  util.py  version.py
software/: test.file
software/cloudooo/test/: README.md  dummy.ca.crt  dummy.crl.pem  pyproject.toml  setup.py  test.py
software/cloudooo/test/data/: PO-1.odt  test.TestLibreofficeDrawToPNGConversion.test.odg  test.odt
stack/: apache-php.cfg  apache.cfg  cloudooo.cfg  erp5.cfg  flask.cfg  hadoop.cfg  java.cfg  kvm.cfg  lamp.cfg  nbd.cfg  nodejs.cfg  nosqltestbed.cfg  nxdtest.cfg  shacache-client.cfg  sheepdogtestbed.cfg  slapos-dev.cfg  slapos-py2.cfg  slapos-py3.cfg  slapos.cfg  slapos.cfg.orig  testnode.cfg  tomcat.cfg  xwiki.cfg
(+14317 files in other folders)
